Added lab 8, changes to other labs.

--- a/CS 480 Computational Geometry/Labs/03 - Convex Hull Algorithms.ipynb
+++ b/CS 480 Computational Geometry/Labs/03 - Convex Hull Algorithms.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
     "\n",
     "def leftHandTurn(A:PointE2, B:PointE2, C:PointE2):\n",
     "    \"\"\"Returns true iff. the points A, B, C constitute a left hand turn.\"\"\"\n",
-    "    return areaOfParallelogram(A, B, C) > 0\n",
+    "    return areaOfTriangle(A, B, C) > 0\n",
     "\n",
     "def perturb(pointSet, scale=1e-8):\n",
     "    \"\"\"Randomly perturbs a list of points by a small amount.\"\"\"\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,13 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7978b1749fb847bcb2ed6e2c3c77732c",
+       "model_id": "db5dcfb6ce014bdb97ee0b9be4c2ebfa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -633,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
