--- a/CS 480 Computational Geometry/Labs/04 - Half-Edge Data Structure.ipynb
+++ b/CS 480 Computational Geometry/Labs/04 - Half-Edge Data Structure.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "What is needed is a spacial data structure that can elegantly store subdivisions of the plane into polygonal regions and answer lots of queries efficiently. Queries like, what are the vertices / edges of some given face? What are the edges incident to a given vertex? What are the faces incident to a given edge? Whast are the faces incident along the edges of some other face? Etc. \n",
     "\n",
-    "Remarkably a powerful data structure exists that answers these queries and more _as efficiently as possible_. The data structure is actually quite simple, though it is a little bit fiddly to get right--because it is a generalization of doubly-linked lists. The data structure is often called the _half-edge datastructure_ (and is also known as a _doubly-connected edge list_ or _DCEL_ ).\n",
+    "Remarkably a powerful data structure exists that answers these queries and more _as efficiently as possible_. The data structure is actually quite simple, though it is a little bit fiddly to get right--because it is a generalization of doubly-linked lists. The data structure is often called the _half-edge datastructure_ (and is also known as a _doubly-connected edge list_ or _DCEL_).\n",
     "\n",
     "In this lab we will develop a half-edge data structure for storing subdivisions of some polygon into polygonal regions without holes. Note though that with slight modifications the data structure developed here can be extended to store more generally _any_ planar striaght-line graph--_PSLG_--a non-crossing embedding of a planar graph in the plane with edges represented as striaght line segments. It can also be used to store piecewise-linear surfaces in $\\mathbb{R}^3$ like polyhedra so long as they are manifolds--meaning that each edge is incident to at most two faces.\n",
     "\n",
@@ -77,7 +77,7 @@
     "\n",
     "# UML Diagram\n",
     "\n",
-    "![img/dceluml.png](img/dceluml.png)\n",
+    "TODO\n",
     "\n",
     "# The Lab\n",
     "\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,9 +255,266 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "/* \n",
+       " * JavaScript to interact with p5viewer.py for viewing constructions in \n",
+       " * Jupyter\n",
+       " * Based on example: https://hub.gke.mybinder.org/user/jtpio-p5-jupyter-notebook-z9kpfjdk/notebooks/puzzle.ipynb\n",
+       " * @author John C. Bowers\n",
+       " */ \n",
+       "\n",
+       "\n",
+       "/*** LIBRARIES ***/\n",
+       "require.config({\n",
+       "    paths: {\n",
+       "        'p5': 'https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min',\n",
+       "        'lodash': 'https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min'\n",
+       "    }\n",
+       "});\n",
+       "\n",
+       "/*** HELPER FUNCTIONS ***/\n",
+       "\n",
+       "window.defineModule = function (name, dependencies, module) {\n",
+       "    // force the recreation of the module\n",
+       "    // (when re-executing a cell)\n",
+       "    require.undef(name);\n",
+       "    \n",
+       "    define(name, dependencies, module);\n",
+       "};\n",
+       "\n",
+       "window.createSketchView = function (name, dependencies, module) {\n",
+       "    \n",
+       "    require.undef(name);\n",
+       "    \n",
+       "    define(name,\n",
+       "           ['@jupyter-widgets/base', 'p5', 'lodash'].concat(dependencies),\n",
+       "           (widgets, p5, _, ...deps) => {\n",
+       "\n",
+       "        let viewName = `${name}View`;\n",
+       "        \n",
+       "        let View = widgets.DOMWidgetView.extend({\n",
+       "            initialize: function () {\n",
+       "                this.el.setAttribute('style', 'text-align: center;');\n",
+       "            },\n",
+       "\n",
+       "            render: function () {\n",
+       "                // pass the model as the last dependency so it can\n",
+       "                // be accessed in the sketch\n",
+       "                let sketch = module(...deps, this.model);\n",
+       "                setTimeout(() => {\n",
+       "                    this.sketch = new p5(sketch, this.el);                    \n",
+       "                }, 0);\n",
+       "            },\n",
+       "\n",
+       "            remove: function () {\n",
+       "                // stop the existing sketch when the view is removed\n",
+       "                // so p5.js can cancel the animation frame callback and free up resources\n",
+       "                if (this.sketch) {\n",
+       "                    this.sketch.remove();\n",
+       "                    this.sketch = null;\n",
+       "                }\n",
+       "            }\n",
+       "        });\n",
+       "        \n",
+       "        return {\n",
+       "            [viewName] : View,\n",
+       "        };\n",
+       "    });\n",
+       "}\n",
+       "\n",
+       "// Test module defining a few constants, for example purposes\n",
+       "// Such constants should ideally be defined directly in the model\n",
+       "// and directly accessed by the view\n",
+       "\n",
+       "defineModule('euclidean2Module', [], () => {\n",
+       "    const [W, H] = [500, 500];\n",
+       "    return {W, H};\n",
+       "})\n",
+       "\n",
+       "let _shown = false;\n",
+       "var THE_STYLE = 0;\n",
+       "var _DEBUG = false;\n",
+       "\n",
+       "createSketchView('E2Sketch', ['euclidean2Module'], (Settings, model) => {\n",
+       "    return function(p) {\n",
+       "        const {W, H} = Settings;\n",
+       "        \n",
+       "        p.setup = function(){\n",
+       "            let w = model.get('width');\n",
+       "            let h = model.get('height');\n",
+       "            let s = model.get('scale');\n",
+       "            p.createCanvas(w, h);\n",
+       "            p.zoom = 1.0;\n",
+       "            p.canvasScale = s;\n",
+       "            p.frame = 0;\n",
+       "        }\n",
+       "        \n",
+       "        p.setStyle = function(style) {\n",
+       "            \n",
+       "            if (style == null) return;\n",
+       "\n",
+       "            if (\"stroke\" in style) {\n",
+       "                if (style[\"stroke\"] == null) p.noStroke();\n",
+       "                else                         p.stroke(style[\"stroke\"]);\n",
+       "            }\n",
+       "            \n",
+       "            if (\"strokeWeight\" in style) {\n",
+       "                if (style[\"strokeWeight\"] != null) p.strokeWeight(style[\"strokeWeight\"]*p.canvasScale);\n",
+       "            }\n",
+       "            \n",
+       "            if (\"fill\" in style) {\n",
+       "                if (style[\"fill\"] == null) p.noFill();\n",
+       "                else                       p.fill(style[\"fill\"]);\n",
+       "            }\n",
+       "        }\n",
+       "        \n",
+       "        p.hasStyle = function (objData) {\n",
+       "            return \"style\" in objData && objData[\"style\"] != null;\n",
+       "        }\n",
+       "        \n",
+       "        p.drawPointE2 = function (pointData) {\n",
+       "            let pt = pointData[\"point\"];\n",
+       "            if (!p.hasStyle(pointData)) {\n",
+       "                p.noStroke();\n",
+       "                p.fill(100, 125, 255);\n",
+       "            }\n",
+       "            p.circle(pt[0], pt[1], 5 * p.canvasScale);\n",
+       "        }\n",
+       "        \n",
+       "        p.drawPolygonE2 = function(polygonData) {\n",
+       "            let polygon = polygonData[\"vertices\"];\n",
+       "            p.beginShape();\n",
+       "            polygon.forEach(v => {\n",
+       "                p.vertex(v[0], v[1]);\n",
+       "            });\n",
+       "            p.endShape(p.CLOSE);\n",
+       "        }\n",
+       "        \n",
+       "        p.drawPolygons = function (polygonsData) {\n",
+       "            let polygons = polygonsData[\"polygons\"];\n",
+       "            polygons.forEach(polygon => {\n",
+       "                p.beginShape();\n",
+       "                polygon.forEach(v => {\n",
+       "                    p.vertex(v[0], v[1]);\n",
+       "                });\n",
+       "                p.endShape();\n",
+       "            });\n",
+       "        }\n",
+       "        \n",
+       "        p.drawCircleE2 = function (circleData) {\n",
+       "            let center = circleData[\"center\"];\n",
+       "            let radius = circleData[\"radius\"];\n",
+       "            if (!p.hasStyle(circleData)) {\n",
+       "                p.stroke(0,0,0);\n",
+       "                p.noFill();\n",
+       "            }\n",
+       "            p.circle(center[0], center[1], 2*radius);\n",
+       "        }\n",
+       "        \n",
+       "        p.drawSegmentE2 = function (segData) {\n",
+       "            let endpoints = segData[\"endpoints\"];\n",
+       "            p.line(endpoints[0][0],\n",
+       "                   endpoints[0][1],\n",
+       "                   endpoints[1][0],\n",
+       "                   endpoints[1][1]);\n",
+       "        }\n",
+       "        \n",
+       "        p.drawCircleArcE2 = function (arcData) {\n",
+       "            let center = arcData[\"center\"];\n",
+       "            let radius = arcData[\"radius\"];\n",
+       "            let srcAngle = arcData[\"srcAngle\"];\n",
+       "            let targetAngle = arcData[\"targetAngle\"];\n",
+       "            let diameter = 2 * radius;\n",
+       "            \n",
+       "            p.arc(center[0], center[1], diameter, diameter, srcAngle, targetAngle);\n",
+       "        }\n",
+       "/*\n",
+       "\"center\": arc.disk.center.toPointE2(), \n",
+       "                      \"radius\": rad,\n",
+       "                      \"srcAngle\": srcAngle, \n",
+       "                      \"targetAngle\": targetAngle}\n",
+       "                      */\n",
+       "        p.draw = function () {\n",
+       "            \n",
+       "            if (model.get('objectsDirty') || p.objs.length > 1) {\n",
+       "                model.set('objectsDirty', false);\n",
+       "                p.objs = JSON.parse(model.get('objects'));\n",
+       "                \n",
+       "                \n",
+       "                p.scale(1 / p.canvasScale, -1 / p.canvasScale);\n",
+       "                p.translate(p.canvasScale * p.width * 0.5, -p.canvasScale * p.height * 0.5);\n",
+       "                \n",
+       "            \n",
+       "                p.background('#fff');\n",
+       "\n",
+       "                p.objs[p.frame].forEach(obj => {\n",
+       "                    p.push();\n",
+       "                    if (\"style\" in obj && obj[\"style\"] != null) {\n",
+       "                        p.setStyle(obj[\"style\"]);\n",
+       "                    }\n",
+       "                    \n",
+       "                    switch (obj[\"type\"]) {\n",
+       "                        case \"PointE2\": p.drawPointE2(obj); break;\n",
+       "                        case \"Polygons\": p.drawPolygons(obj); break;\n",
+       "                        case \"PolygonE2\": p.drawPolygonE2(obj); break;\n",
+       "                        case \"SegmentE2\": p.drawSegmentE2(obj); break;\n",
+       "                        case \"CircleE2\": p.drawCircleE2(obj); break;\n",
+       "                        case \"CircleArcE2\": p.drawCircleArcE2(obj); break;\n",
+       "                        default: console.log(obj[\"type\"] + \" is not drawable in this sketch.\");\n",
+       "                    }\n",
+       "                    p.pop();\n",
+       "                });\n",
+       "                if (p.objs.length == 1) {\n",
+       "                    p.noLoop();\n",
+       "                } else {\n",
+       "                    p.frame = (p.frame + 1) % p.objs.length;\n",
+       "                }\n",
+       "            }\n",
+       "            \n",
+       "        }\n",
+       "        \n",
+       "//         p.keyTyped = function () {\n",
+       "//           if (key === 'e') {\n",
+       "//             photo.save('photo', 'png');\n",
+       "//           }\n",
+       "//         }\n",
+       "    };\n",
+       "})"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9feb6c56b4c94df2b47eb8f4b3d1fa5e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "E2Sketch(height=600, objects='[[{\"type\": \"SegmentE2\", \"endpoints\": [[-250, -150], [0, -150]], \"style\": {\"strok…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from koebe.graphics.euclidean2viewer import E2Viewer, makeStyle\n",
     "\n",
@@ -286,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
