--- a/CS 480 Computational Geometry/Labs/06 - Voronoi Diagram from Delaunay Triangulation.ipynb
+++ b/CS 480 Computational Geometry/Labs/06 - Voronoi Diagram from Delaunay Triangulation.ipynb
@@ -556,7 +556,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def face_to_point(face):\n",
+    "    return vor_point\n",
+    "\n",
+    "for f in dcel.faces:\n",
+    "    if f != dcel.outerFace:\n",
+    "        p = face_to_point(f)\n",
+    "        draw(p)\n",
+    "for he in dcel.halfEdges:\n",
+    "    if he.face != dcel.outerFace and he.twin.face != dcel.outerFace:\n",
+    "        p = face_to_point(he.face)\n",
+    "        q = face_to_point(he.twin.face)\n",
+    "        draw_segment(p, q)"
+   ]
   }
  ],
  "metadata": {
@@ -575,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
