--- a/CS 480 Computational Geometry/Labs/07 - Curve Shortening.ipynb
+++ b/CS 480 Computational Geometry/Labs/07 - Curve Shortening.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Curve Shortening\n",
+    "# Lab 07 - Curve Shortening\n",
     "\n",
     "This lab is designed to give you a little practice with the curve shortening algorithms from section 5.5 in the textbook. \n",
     "\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,13 +248,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2afd2584f93a46a485c12ed53f282f56",
+       "model_id": "332a3a98ecdc480996dbe07a8225cc44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,15 +332,8 @@
     "    return Polygon([PointE2(v.pos.y, v.pos.x) for v in poly])\n",
     "\n",
     "\n",
-    "CurveShorteningCanvas(scaling = True)"
+    "CurveShorteningCanvas(scaling = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
