Updated Example Notebooks. Probably just Jupyter issues.

--- a/Example Notebooks/Poisson Disk Sampling Examples.ipynb
+++ b/Example Notebooks/Poisson Disk Sampling Examples.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -148,6 +148,7 @@
        "            p.createCanvas(w, h);\n",
        "            p.zoom = 1.0;\n",
        "            p.canvasScale = s;\n",
+       "            p.frame = 0;\n",
        "        }\n",
        "        \n",
        "        p.setStyle = function(style) {\n",
@@ -182,13 +183,13 @@
        "            p.circle(pt[0], pt[1], 5 * p.canvasScale);\n",
        "        }\n",
        "        \n",
-       "        p.drawPolygon = function(polygonData) {\n",
+       "        p.drawPolygonE2 = function(polygonData) {\n",
        "            let polygon = polygonData[\"vertices\"];\n",
        "            p.beginShape();\n",
        "            polygon.forEach(v => {\n",
        "                p.vertex(v[0], v[1]);\n",
        "            });\n",
-       "            p.endShape();\n",
+       "            p.endShape(p.CLOSE);\n",
        "        }\n",
        "        \n",
        "        p.drawPolygons = function (polygonsData) {\n",
@@ -237,7 +238,7 @@
        "                      */\n",
        "        p.draw = function () {\n",
        "            \n",
-       "            if (model.get('objectsDirty')) {\n",
+       "            if (model.get('objectsDirty') || p.objs.length > 1) {\n",
        "                model.set('objectsDirty', false);\n",
        "                p.objs = JSON.parse(model.get('objects'));\n",
        "                \n",
@@ -248,15 +249,16 @@
        "            \n",
        "                p.background('#fff');\n",
        "\n",
-       "                p.objs.forEach(obj => {\n",
+       "                p.objs[p.frame].forEach(obj => {\n",
        "                    p.push();\n",
        "                    if (\"style\" in obj && obj[\"style\"] != null) {\n",
        "                        p.setStyle(obj[\"style\"]);\n",
        "                    }\n",
+       "                    \n",
        "                    switch (obj[\"type\"]) {\n",
        "                        case \"PointE2\": p.drawPointE2(obj); break;\n",
        "                        case \"Polygons\": p.drawPolygons(obj); break;\n",
-       "                        case \"Polygon\": p.drawPolygon(obj); break;\n",
+       "                        case \"PolygonE2\": p.drawPolygonE2(obj); break;\n",
        "                        case \"SegmentE2\": p.drawSegmentE2(obj); break;\n",
        "                        case \"CircleE2\": p.drawCircleE2(obj); break;\n",
        "                        case \"CircleArcE2\": p.drawCircleArcE2(obj); break;\n",
@@ -264,17 +266,20 @@
        "                    }\n",
        "                    p.pop();\n",
        "                });\n",
-       "                \n",
-       "                p.noLoop();\n",
+       "                if (p.objs.length == 1) {\n",
+       "                    p.noLoop();\n",
+       "                } else {\n",
+       "                    p.frame = (p.frame + 1) % p.objs.length;\n",
+       "                }\n",
        "            }\n",
        "            \n",
        "        }\n",
        "        \n",
-       "        p.keyTyped = function () {\n",
-       "          if (key === 'e') {\n",
-       "            photo.save('photo', 'png');\n",
-       "          }\n",
-       "        }\n",
+       "//         p.keyTyped = function () {\n",
+       "//           if (key === 'e') {\n",
+       "//             photo.save('photo', 'png');\n",
+       "//           }\n",
+       "//         }\n",
        "    };\n",
        "})"
       ],
@@ -288,12 +293,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "664b1ff00d5a4c82a06ce2a4b3bcfadf",
+       "model_id": "b4876a26dac24fb396383e48069d2901",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "E2Sketch(height=500, objects='[{\"type\": \"PointE2\", \"point\": [-1, -0.7536327725124092]}, {\"type\": \"PointE2\", \"p…"
+       "E2Sketch(height=500, objects='[[{\"type\": \"PointE2\", \"point\": [-1, -0.8280624561908771]}, {\"type\": \"PointE2\", \"…"
       ]
      },
      "metadata": {},
@@ -315,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -430,6 +435,7 @@
        "            let h = model.get('height');\n",
        "            p.createCanvas(w, h, p.WEBGL);\n",
        "            p.zoom = 1.0;\n",
+       "            p.frame = 0;\n",
        "        }\n",
        "        \n",
        "        p.setStyle = function(style) {\n",
@@ -576,7 +582,7 @@
        "                p.sphere(0.999, 96, 64);\n",
        "            //p.sphereDetail(30);\n",
        "            \n",
-       "            p.objs.forEach(obj => {\n",
+       "            p.objs[p.frame].forEach(obj => {\n",
        "                p.push();\n",
        "                if (\"style\" in obj && obj[\"style\"] != null) {\n",
        "                    p.setStyle(obj[\"style\"]);\n",
@@ -592,12 +598,29 @@
        "                p.pop();\n",
        "            });\n",
        "            \n",
+       "            if (p.objs.length != 1) {\n",
+       "                p.frame = (p.frame + 1) % p.objs.length;\n",
+       "            }\n",
        "        } \n",
        "    };\n",
        "})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "39f961d65b034775b392c08c131bf85d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "S2Sketch(height=500, objects='[[{\"type\": \"PointE3\", \"point\": [-0.7447291006416871, -0.6166822082741783, -0.255…"
       ]
      },
      "metadata": {},
@@ -611,12 +634,12 @@
     "viewer.addAll(pts)\n",
     "viewer.addAll(mesh.edges)\n",
     "viewer.addAll(mesh.faces)\n",
-    "#viewer.show()"
+    "viewer.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -723,6 +746,7 @@
        "            p.createCanvas(w, h);\n",
        "            p.zoom = 1.0;\n",
        "            p.canvasScale = s;\n",
+       "            p.frame = 0;\n",
        "        }\n",
        "        \n",
        "        p.setStyle = function(style) {\n",
@@ -757,13 +781,13 @@
        "            p.circle(pt[0], pt[1], 5 * p.canvasScale);\n",
        "        }\n",
        "        \n",
-       "        p.drawPolygon = function(polygonData) {\n",
+       "        p.drawPolygonE2 = function(polygonData) {\n",
        "            let polygon = polygonData[\"vertices\"];\n",
        "            p.beginShape();\n",
        "            polygon.forEach(v => {\n",
        "                p.vertex(v[0], v[1]);\n",
        "            });\n",
-       "            p.endShape();\n",
+       "            p.endShape(p.CLOSE);\n",
        "        }\n",
        "        \n",
        "        p.drawPolygons = function (polygonsData) {\n",
@@ -812,41 +836,48 @@
        "                      */\n",
        "        p.draw = function () {\n",
        "            \n",
-       "            p.scale(1 / p.canvasScale, -1 / p.canvasScale);\n",
-       "            p.translate(p.canvasScale * p.width * 0.5, -p.canvasScale * p.height * 0.5);\n",
-       "            \n",
-       "            if (_DEBUG) console.log(\"DRAWING\"); \n",
-       "            if (model.get('objectsDirty')) {\n",
+       "            if (model.get('objectsDirty') || p.objs.length > 1) {\n",
        "                model.set('objectsDirty', false);\n",
        "                p.objs = JSON.parse(model.get('objects'));\n",
+       "                \n",
+       "                \n",
+       "                p.scale(1 / p.canvasScale, -1 / p.canvasScale);\n",
+       "                p.translate(p.canvasScale * p.width * 0.5, -p.canvasScale * p.height * 0.5);\n",
+       "                \n",
+       "            \n",
+       "                p.background('#fff');\n",
+       "\n",
+       "                p.objs[p.frame].forEach(obj => {\n",
+       "                    p.push();\n",
+       "                    if (\"style\" in obj && obj[\"style\"] != null) {\n",
+       "                        p.setStyle(obj[\"style\"]);\n",
+       "                    }\n",
+       "                    \n",
+       "                    switch (obj[\"type\"]) {\n",
+       "                        case \"PointE2\": p.drawPointE2(obj); break;\n",
+       "                        case \"Polygons\": p.drawPolygons(obj); break;\n",
+       "                        case \"PolygonE2\": p.drawPolygonE2(obj); break;\n",
+       "                        case \"SegmentE2\": p.drawSegmentE2(obj); break;\n",
+       "                        case \"CircleE2\": p.drawCircleE2(obj); break;\n",
+       "                        case \"CircleArcE2\": p.drawCircleArcE2(obj); break;\n",
+       "                        default: console.log(obj[\"type\"] + \" is not drawable in this sketch.\");\n",
+       "                    }\n",
+       "                    p.pop();\n",
+       "                });\n",
+       "                if (p.objs.length == 1) {\n",
+       "                    p.noLoop();\n",
+       "                } else {\n",
+       "                    p.frame = (p.frame + 1) % p.objs.length;\n",
+       "                }\n",
        "            }\n",
-       "            \n",
-       "            p.background('#fff');\n",
-       "            \n",
-       "            p.objs.forEach(obj => {\n",
-       "                p.push();\n",
-       "                if (\"style\" in obj && obj[\"style\"] != null) {\n",
-       "                    p.setStyle(obj[\"style\"]);\n",
-       "                }\n",
-       "                switch (obj[\"type\"]) {\n",
-       "                    case \"PointE2\": p.drawPointE2(obj); break;\n",
-       "                    case \"Polygons\": p.drawPolygons(obj); break;\n",
-       "                    case \"Polygon\": p.drawPolygon(obj); break;\n",
-       "                    case \"SegmentE2\": p.drawSegmentE2(obj); break;\n",
-       "                    case \"CircleE2\": p.drawCircleE2(obj); break;\n",
-       "                    case \"CircleArcE2\": p.drawCircleArcE2(obj); break;\n",
-       "                    default: console.log(obj[\"type\"] + \" is not drawable in this sketch.\");\n",
-       "                }\n",
-       "                p.pop();\n",
-       "            });\n",
        "            \n",
        "        }\n",
        "        \n",
-       "        p.keyTyped = function () {\n",
-       "          if (key === 'e') {\n",
-       "            photo.save('photo', 'png');\n",
-       "          }\n",
-       "        }\n",
+       "//         p.keyTyped = function () {\n",
+       "//           if (key === 'e') {\n",
+       "//             photo.save('photo', 'png');\n",
+       "//           }\n",
+       "//         }\n",
        "    };\n",
        "})"
       ],
@@ -858,22 +889,25 @@
      "output_type": "display_data"
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'mesh2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-06564d8d1771>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mviewer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mUnitScaleE2Sketch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mviewer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddAll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmesh2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mverts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mviewer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddAll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmesh2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medges\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#viewer.show()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mesh2' is not defined"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d63b4c5d75204c44bd86fa9f693ac20d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "E2Sketch(height=500, objects='[[{\"type\": \"PointE2\", \"point\": [0.9999999999999999, 0.764521137329421]}, {\"type\"…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "viewer = UnitScaleE2Sketch()\n",
     "viewer.addAll(mesh2.verts)\n",
     "viewer.addAll(mesh2.edges)\n",
-    "#viewer.show()"
+    "viewer.show()"
    ]
   },
   {
