--- a/Example Notebooks/Tutte_Embeddings.ipynb
+++ b/Example Notebooks/Tutte_Embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "from koebe.algorithms.hypPacker import *\n",
     "from koebe.algorithms.sampling import surfaceSampling, boundarySampling\n",
     "from koebe.algorithms.poissonDiskSampling import slowAmbientSurfaceSampling, slowAmbientBoundarySampling\n",
-    "from koebe.algorithms.cvt import weightedCVT, worldToImgPixelCoords\n",
+    "#from koebe.algorithms.cvt import weightedCVT, worldToImgPixelCoords\n",
     "from koebe.algorithms.tutteEmbeddings import tutteEmbeddingE2\n",
     "\n",
     "# Graphics:\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,13 +179,13 @@
        "            p.circle(pt[0], pt[1], 5 * p.canvasScale);\n",
        "        }\n",
        "        \n",
-       "        p.drawPolygon = function(polygonData) {\n",
+       "        p.drawPolygonE2 = function(polygonData) {\n",
        "            let polygon = polygonData[\"vertices\"];\n",
        "            p.beginShape();\n",
        "            polygon.forEach(v => {\n",
        "                p.vertex(v[0], v[1]);\n",
        "            });\n",
-       "            p.endShape();\n",
+       "            p.endShape(p.CLOSE);\n",
        "        }\n",
        "        \n",
        "        p.drawPolygons = function (polygonsData) {\n",
@@ -250,10 +250,11 @@
        "                    if (\"style\" in obj && obj[\"style\"] != null) {\n",
        "                        p.setStyle(obj[\"style\"]);\n",
        "                    }\n",
+       "                    \n",
        "                    switch (obj[\"type\"]) {\n",
        "                        case \"PointE2\": p.drawPointE2(obj); break;\n",
        "                        case \"Polygons\": p.drawPolygons(obj); break;\n",
-       "                        case \"Polygon\": p.drawPolygon(obj); break;\n",
+       "                        case \"PolygonE2\": p.drawPolygonE2(obj); break;\n",
        "                        case \"SegmentE2\": p.drawSegmentE2(obj); break;\n",
        "                        case \"CircleE2\": p.drawCircleE2(obj); break;\n",
        "                        case \"CircleArcE2\": p.drawCircleArcE2(obj); break;\n",
@@ -270,11 +271,11 @@
        "            \n",
        "        }\n",
        "        \n",
-       "        p.keyTyped = function () {\n",
-       "          if (key === 'e') {\n",
-       "            photo.save('photo', 'png');\n",
-       "          }\n",
-       "        }\n",
+       "//         p.keyTyped = function () {\n",
+       "//           if (key === 'e') {\n",
+       "//             photo.save('photo', 'png');\n",
+       "//           }\n",
+       "//         }\n",
        "    };\n",
        "})"
       ],
@@ -288,12 +289,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "677f3fd1217c48a6a96133a1bf161cf6",
+       "model_id": "b7b11aa49fbb40a5b571d154ce0b8ce9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "E2Sketch(height=500, objects='[[{\"type\": \"SegmentE2\", \"endpoints\": [[-0.20019092832447521, -0.2943059308627749…"
+       "E2Sketch(height=500, objects='[[{\"type\": \"SegmentE2\", \"endpoints\": [[-0.14285714285714288, 0.16495721976846456…"
       ]
      },
      "metadata": {},
@@ -623,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
